--- a/README
+++ b/README
@@ -1,1 +1,35 @@
-README.md
+A simple beat em up used at a game workshop that I recently conducted.
+
+# Credits
+
+## The music
+
+level-1 : Streets of Rage (stage 1)
+
+boss-1  : Batman (SEGA Genesis version)
+
+level-2 : Streets of Rage (stage 5) (remix)
+
+boss-2  : Thunder Force IV boss
+
+## Sprites
+
+All sprites from http://wwwdynapaul.wikia.com/wiki/King_of_Fighters_Sprites
+
+## Sound effects
+
+Sound effects mostly from http://soundbible.com/tags-scream.html
+
+# controls
+
+`<-` walk left
+
+`->` walk right
+
+`a` Punch
+
+`s` Kick
+
+# Bugs
+
+Several but this was supposed to be educational. Fixing them is left as an exercise to the reader.
